<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActivitiesExercise</string>

    <!-- Main Activity -->
    <string name="textActivities">Activities</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Buttons -->
    <string name="buttonStack">Button Stack</string>
    <string name="buttonActividad2">Button Actividad2</string>
    <string name="buttonActividad3">Button Actividad3</string>
    <string name="buttonBrowser">Open Browser</string>
    <string name="buttonCall">Call Button</string>

    <!-- StackActiviy -->
    <string name="stackActivityText">Stack Activity</string>
    <string name="title_activity_stack">StackActivity</string>

    <!-- Actividad2 -->
    <string name="title_activity_actividad2">Actividad2</string>

    <!-- Actividad3 -->
    <string name="title_activity_actividad3">Actividad3</string>

</resources>